--- a/settings.gradle
+++ b/settings.gradle
@@ -8,6 +8,7 @@ pluginManagement {
         id 'com.android.application' version '7.1.0-alpha11'
         id 'com.android.library' version '7.1.0-alpha11'
         id 'org.jetbrains.kotlin.android' version '1.5.20'
+        id 'com.google.gms.google-services'
     }
 }
 dependencyResolutionManagement {
