--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".ui.LoginActivity"/>
+        <activity android:name=".ui.SignupActivity"/>
+        <activity android:name=".ui.MainActivity"/>
     </application>
 
 </manifest>
