--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,7 @@
         <activity android:name=".ui.LoginActivity"/>
         <activity android:name=".ui.SignupActivity"/>
         <activity android:name=".ui.main.MainActivity"/>
+        <activity android:name=".ui.ChattingActivity"/>
     </application>
 
 </manifest>
