--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,14 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.example.firetalk" >
 
     <application
-        android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:allowBackup="false"
+        android:fullBackupContent="false"
+        android:icon="@drawable/menu_profile"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@drawable/menu_profile"
         android:supportsRtl="true"
-        android:theme="@style/Theme.FireTalk" >
+        android:usesCleartextTraffic="true"
+        android:theme="@style/Theme.FireTalk"
+        tools:targetApi="s">
         <activity
             android:name=".ui.SplashActivity"
             android:exported="true" >
