--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,8 @@
         android:usesCleartextTraffic="true"
         android:theme="@style/Theme.FireTalk"
         tools:targetApi="s">
+        <meta-data android:name="com.google.android.gms.games.APP_ID"
+            android:value="@string/app_id" />
         <activity
             android:name=".ui.SplashActivity"
             android:exported="true" >
