--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,8 +24,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ui.LoginActivity"/>
-        <activity android:name=".ui.SignupActivity"/>
+        <activity android:name=".ui.login.LoginActivity"/>
+        <activity android:name=".ui.Signup.SignupActivity"/>
         <activity android:name=".ui.main.MainActivity"/>
         <activity android:name=".ui.chatting.ChattingActivity"
             android:windowSoftInputMode="adjustResize"/>
