--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,7 +25,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".ui.login.LoginActivity"/>
-        <activity android:name=".ui.Signup.SignupActivity"/>
+        <activity android:name=".ui.signup.SignupActivity"/>
         <activity android:name=".ui.main.MainActivity"/>
         <activity android:name=".ui.chatting.ChattingActivity"
             android:windowSoftInputMode="adjustResize"/>
