--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,9 +6,9 @@
     <application
         android:allowBackup="false"
         android:fullBackupContent="false"
-        android:icon="@drawable/menu_profile"
+        android:icon="@drawable/logo_bubble"
         android:label="@string/app_name"
-        android:roundIcon="@drawable/menu_profile"
+        android:roundIcon="@drawable/logo_bubble"
         android:supportsRtl="true"
         android:usesCleartextTraffic="true"
         android:theme="@style/Theme.FireTalk"
